check_output.txt
    Checking ingestor v0.1.0 (/Users/alaa/Projects/ingestor)
warning: unused import: `crate::core::types::Execution`
 --> src/execution/actor.rs:3:5
  |
3 | use crate::core::types::Execution;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `async_trait::async_trait`
 --> src/polymarket/actor.rs:5:5
  |
5 | use async_trait::async_trait;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `tokio::time::interval`
 --> src/polymarket/actor.rs:9:5
  |
9 | use tokio::time::interval;
  |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `warn`
  --> src/polymarket/actor.rs:11:28
   |
11 | use tracing::{error, info, warn};
   |                            ^^^^

error[E0609]: no field `pageLimit` on type `PolyCfg`
  --> src/polymarket/actor.rs:71:36
   |
71 |             if len < self.poly_cfg.pageLimit as usize {
   |                                    ^^^^^^^^^ unknown field
   |
help: a field with a similar name exists
   |
71 -             if len < self.poly_cfg.pageLimit as usize {
71 +             if len < self.poly_cfg.page_limit as usize {
   |

error[E0609]: no field `pageLimit` on type `PolyCfg`
  --> src/polymarket/actor.rs:74:37
   |
74 |             offset += self.poly_cfg.pageLimit;
   |                                     ^^^^^^^^^ unknown field
   |
help: a field with a similar name exists
   |
74 -             offset += self.poly_cfg.pageLimit;
74 +             offset += self.poly_cfg.page_limit;
   |

warning: use of deprecated associated function `chrono::DateTime::<Tz>::from_utc`: Use TimeZone::from_utc_datetime() or DateTime::from_naive_utc_and_offset instead
   --> src/strategy/event_features.rs:301:38
    |
301 |         let start = DateTime::<Utc>::from_utc(start_date.and_hms_opt(0, 0, 0).unwrap(), Utc);
    |                                      ^^^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

warning: use of deprecated associated function `chrono::DateTime::<Tz>::from_utc`: Use TimeZone::from_utc_datetime() or DateTime::from_naive_utc_and_offset instead
   --> src/strategy/event_features.rs:302:36
    |
302 |         let end = DateTime::<Utc>::from_utc(end_date.and_hms_opt(23, 59, 59).unwrap(), Utc);
    |                                    ^^^^^^^^

warning: use of deprecated associated function `chrono::DateTime::<Tz>::from_utc`: Use TimeZone::from_utc_datetime() or DateTime::from_naive_utc_and_offset instead
   --> src/strategy/event_features.rs:312:38
    |
312 |         let start = DateTime::<Utc>::from_utc(start_date.and_hms_opt(0, 0, 0).unwrap(), Utc);
    |                                      ^^^^^^^^

warning: use of deprecated associated function `chrono::DateTime::<Tz>::from_utc`: Use TimeZone::from_utc_datetime() or DateTime::from_naive_utc_and_offset instead
   --> src/strategy/event_features.rs:313:36
    |
313 |         let end = DateTime::<Utc>::from_utc(end_date.and_hms_opt(23, 59, 59).unwrap(), Utc);
    |                                    ^^^^^^^^

For more information about this error, try `rustc --explain E0609`.
warning: `ingestor` (bin "ingestor") generated 8 warnings
error: could not compile `ingestor` (bin "ingestor") due to 2 previous errors; 8 warnings emitted
